feature: Search Aggregations API - Annotations-based and Entity Streams based (#149)
* feature: completes @Aggregation annotation features (resolves gh-79, gh-88)

* feature: Aggregations API for EntityStreams

* Update redis-om-spring/src/main/java/com/redis/om/spring/repository/query/RedisEnhancedQuery.java

Co-authored-by: M Sazzadul Hoque <7600764+sazzad16@users.noreply.github.com>

* Update redis-om-spring/src/test/java/com/redis/om/spring/search/stream/EntityStreamsAggregationsTest.java

Co-authored-by: M Sazzadul Hoque <7600764+sazzad16@users.noreply.github.com>

* Update redis-om-spring/src/main/java/com/redis/om/spring/metamodel/MetamodelGenerator.java

Co-authored-by: M Sazzadul Hoque <7600764+sazzad16@users.noreply.github.com>

Co-authored-by: M Sazzadul Hoque <7600764+sazzad16@users.noreply.github.com>